# godot-engine-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/core/: config.rs  handler.rs  mod.rs  source.rs  style.rs  tags.rs  utils.rs
src/func/: config.rs  install.rs  list.rs  mod.rs  remove.rs  switch.rs  sync.rs  tool.rs  uninstall.rs
